<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/user"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:textColor="@color/ics_blue"
        android:gravity="center"/>
    
    <TextView
        android:id="@+id/acc_msg"
        android:text="@string/acc_msg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleType="center"
        android:background="#FFFFFF"
        android:textColor="@color/ics_blue"
        android:gravity="center"/>
    <EditText
        android:id="@+id/username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username_hint" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_hint"/>

    <CheckBox
        android:id="@+id/acc_mgr_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/ics_blue" />
    
    <TextView
        android:id="@+id/wrong_credentail"
        android:text="@string/wrong_credential_msg"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:textColor="@color/ics_blue"
        android:gravity="center"/>
</LinearLayout>