<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/span"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp" >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_the_app_scroller"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/brand_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/list_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/app_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/l_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gray_divider" />

            <TextView
                android:id="@+id/app_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about_app" />
        </LinearLayout>

        <!--
         <LinearLayout
        android:id="@+id/issues_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brand_container"
        android:layout_margin="5dp"
        android:background="@drawable/list_bg"
        
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/app_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KNOWN ISSUES"
            android:textColor="@color/l_blue"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/gray_divider" />

        <TextView
            android:id="@+id/app_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/known_issue_one" />

        <TextView
            android:id="@+id/app_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/known_issue_two" />
    </LinearLayout>
        -->
        <!--
    <LinearLayout 
        android:layout_below="@id/brand_container"
        android:id="@+id/donation_container"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="100dp"
        android:layout_width="fill_parent">
         <TextView
            android:id="@+id/donate"
            style="@style/layout_wrap"
            android:text="Is this app useful?"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView 
            android:layout_height="70dp"
            android:layout_width="120dp"
            android:src="@drawable/ic_paypal"/>
    </LinearLayout>
        -->

        <LinearLayout
            android:id="@+id/donation_container"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_below="@id/brand_container"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/paypal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/paypal_support_initiative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/donation_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/donation_amount"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/about_the_app_scroller"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/list_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <ListView
        android:id="@+id/app_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#FFFFFF"
        android:clickable="true"
        android:scrollbars="none"
        android:headerDividersEnabled="false" />

</LinearLayout>
</RelativeLayout>